# rosneuro_pwelch

./: CMakeLists.txt  README.md  package.xml
example/: run.cpp  testPwelch.m  test_pwelch.cpp  test_pwelch.launch
include/rosneuro_pwelch/: Pwelch.h  Pwelch.hpp  PwelchNode.h
launch/: pwelch_launch.launch
src/: Pwelch.cpp  PwelchNode.cpp  pwelch_node.cpp
test/: TestPwelch.cpp  TestPwelchNode.cpp  test_pwelch.launch
